--- a/MP3Tool/prj/MP3Tool.vcproj
+++ b/MP3Tool/prj/MP3Tool.vcproj
@@ -211,15 +211,35 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\Helper.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\ID3_FrameID_LUT.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\src\MP3Connector.cpp"
+				RelativePath="..\src\MP3Controller.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MP3Data.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MP3DataGenerator.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\src\MP3Tool.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\Node.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\NodeList.cpp"
 				>
 			</File>
 			<File
@@ -242,6 +262,22 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath="..\src\TrackManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\WordData.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\WordNode.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\WordNodeList.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -249,21 +285,49 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\src\Form1.h"
-				FileType="3"
+				RelativePath="..\src\Helper.h"
 				>
-				<File
-					RelativePath="..\src\Form1.resX"
-					SubType="Designer"
-					>
-				</File>
 			</File>
 			<File
 				RelativePath="..\src\ID3_FrameID_LUT.h"
 				>
 			</File>
 			<File
-				RelativePath="..\src\MP3Connector.h"
+				RelativePath="..\src\IMP3DataGenerator.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\ITrackManager.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MP3Controller.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MP3Data.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MP3DataGenerator.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MP3ToolGUI.h"
+				FileType="3"
+				>
+				<File
+					RelativePath="..\src\MP3ToolGUI.resX"
+					SubType="Designer"
+					>
+				</File>
+			</File>
+			<File
+				RelativePath="..\src\Node.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\NodeList.h"
 				>
 			</File>
 			<File
@@ -272,6 +336,22 @@
 			</File>
 			<File
 				RelativePath="..\src\stdafx.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\TrackManager.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\WordData.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\WordNode.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\WordNodeList.h"
 				>
 			</File>
 		</Filter>
@@ -289,6 +369,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\ClassDiagram1.cd"
+			>
+		</File>
 		<File
 			RelativePath="..\src\ReadMe.txt"
 			>
