--- a/MP3Tool/prj/MP3Tool.vcproj
+++ b/MP3Tool/prj/MP3Tool.vcproj
@@ -263,6 +263,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath="..\src\TrackInfoNode.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\TrackManager.cpp"
 				>
 			</File>
@@ -340,6 +344,10 @@
 			</File>
 			<File
 				RelativePath="..\src\stdafx.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\TrackInfoNode.h"
 				>
 			</File>
 			<File
